--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@fortawesome/pro-regular-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.2.1",
+    "d3": "^5.7.0",
     "history": "^4.7.2",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
@@ -56,6 +57,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "victor": "^1.1.0"
   }
 }
