--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/pro-regular-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "d3": "^5.7.0",
+    "d3-geo": "^1.11.3",
     "history": "^4.7.2",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
@@ -53,11 +55,13 @@
     "npm": "^6.5.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-geolocated": "^2.4.0",
     "react-markdown": "^4.0.6",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "topojson": "^3.0.2",
     "victor": "^1.1.0"
   }
 }
