--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "d3": "^5.7.0",
+    "d3-force": "^2.0.0",
     "d3-geo": "^1.11.3",
     "history": "^4.7.2",
     "i": "^0.3.6",
