--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/pro-regular-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "animate-scss": "^3.2.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "d3": "^5.7.0",
