--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "animate-scss": "^3.2.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "cities.json": "^1.1.5",
     "d3": "^5.7.0",
     "d3-force": "^2.0.0",
     "d3-geo": "^1.11.3",
+    "d3-interpolate": "^1.3.2",
+    "d3-quadtree": "^1.0.5",
     "history": "^4.7.2",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
